sort.basic.gnome.AlgGnomeSort.scala.error
Compilation error:
AlgGnomeSort:7: error: type mismatch;
 found   : Unit
 required: Boolean
  while(l=true){
         ^